  been updated in this release to talk to the main (``launchpad.net``) servers,
  rather than the ``edge`` ones. (Vincent Ladeuil, #583667)

New Features
************

Bug Fixes
*********

* Avoid UnicodeDecodeError in ``bzr add`` with multiple files under a non-ascii
  path on windows from symlink support addition. (Martin [gz], #686611)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******



bzr 2.0.6
#########

:2.0.6: 2010-09-17

The sixth release in our 2.0 series addresses several user-inconvenience
bugs.  None are critical, but upgrading is recommended for all users on
earlier 2.0 releases.

Bug Fixes
*********

* Additional merges after an unrelated branch has been merged with its
  history no longer crash when deleted files are involved.
  (Vincent Ladeuil, John Arbash Meinel, #375898)

* ``bzr add SYMLINK/FILE`` now works properly when the symlink points to a
  previously-unversioned directory within the tree: the directory is
  marked versioned too.  
  (Martin Pool, #192859)

* ``bzr commit SYMLINK`` now works, rather than trying to commit the
  target of the symlink.
  (Martin Pool, John Arbash Meinel, #128562)

* ``bzr revert`` now only takes write lock on working tree, instead of on 
  both working tree and branch.
  (Danny van Heumen, #498409)

* ``bzr upgrade`` now creates the ``backup.bzr`` directory with the same
  permissions as ``.bzr`` directory on a POSIX OS.
  (Parth Malwankar, #262450)

* Don't traceback trying to unversion children files of an already
  unversioned directory.  (Vincent Ladeuil, #494221)

* Don't traceback when a lockdir's ``held/info`` file is corrupt (e.g.
  contains only NUL bytes).  Instead warn the user, and allow ``bzr
  break-lock`` to remove it.  (Andrew Bennetts, #619872)
  
* Fix ``AttributeError on parent.children`` when adding a file under a 
  directory that was a symlink in the previous commit.
  (Martin Pool, #192859)
